@@ -425,7 +425,7 @@ public class SchedulerJobsTestResults {
         this.schedulerJobHelper.executeJob(JobName);
         final HashMap runningBalanceAfter = this.accountHelper.getAccountingWithRunningBalanceById(accountID.toString());
 
-        final Integer INT_BALANCE = new Integer(MINIMUM_OPENING_BALANCE);
+        final Integer INT_BALANCE = Integer.valueOf(MINIMUM_OPENING_BALANCE);
 
         Assert.assertEquals("Verifying Account Running Balance after running Update Accounting Running Balances Scheduler Job",
                 INT_BALANCE, runningBalanceAfter.get("organizationRunningBalance"));
